--- a/404.md
+++ b/404.md
@@ -2,7 +2,12 @@
 
 <p align="center">
 The site configured at this address does not contain the requested file.
+</p>
 
+<p align="center">
 Perhaps the information you are looking for now lives at
+</p>
+
+<p align="center">
 [www.sesync.org](http://www.sesync.org)
 </p>
