--- a/404.md
+++ b/404.md
@@ -8,6 +8,4 @@ The site configured at this address does not contain the requested file.
 Perhaps the information you are looking for now lives at
 </p>
 
-<p align="center">
-[www.sesync.org](http://www.sesync.org)
-</p>
+<a href="http://www.sesync.org">www.sesync.org</a>
