--- a/404.md
+++ b/404.md
@@ -8,4 +8,6 @@ The site configured at this address does not contain the requested file.
 Perhaps the information you are looking for now lives at
 </p>
 
+<h2 align="center">
 <a href="http://www.sesync.org">www.sesync.org</a>
+</h2>
