--- a/404.md
+++ b/404.md
@@ -1,3 +1,7 @@
+---
+permalink: /404.html
+---
+
 <h1 align="center">404</h1>
 
 <p align="center">
@@ -5,7 +9,7 @@ The site configured at this address does not contain the requested file.
 </p>
 
 <p align="center">
-Perhaps the information you are looking for now lives at
+Perhaps the information you are looking for lives at
 </p>
 
 <h2 align="center">
