--- a/_posts/2017-10-06-username.md
+++ b/_posts/2017-10-06-username.md
@@ -1,6 +1,8 @@
 ---
 title: What is my SESYNC username?
 category: FAQ
+tags:
+  - Infrastructure
 ---
 
 Your SESYNC username is your first initial plus last name, (ie: "John Smith" is
