--- a/_posts/2017-10-06-account.md
+++ b/_posts/2017-10-06-account.md
@@ -1,8 +1,15 @@
 ---
 title: How do I get an account?
 category: FAQ
+tags:
+  - Infrastructure
 ---
 
-Anyone who is a PI on a science team, or is part of a long running pursuit, will receive an account prior to their first meeting.
+# {{ title }}
 
-If you haven't received account information, or were added late to a science team, please fill out our [new account request form](http://www.sesync.org/new-account-request).
+Anyone who is a PI on a science team, or is part of a long running
+pursuit, will receive an account prior to their first meeting.
+
+If you haven't received account information, or were added late to a
+science team, please fill out our
+[new account request form](http://www.sesync.org/new-account-request).
