--- a/_posts/2017-10-06-account.md
+++ b/_posts/2017-10-06-account.md
@@ -5,7 +5,7 @@ tags:
   - infrastructure
 ---
 
-# {{ post.title }}
+# {{ page.title }}
 
 Anyone who is a PI on a science team, or is part of a long running
 pursuit, will receive an email with instructions on completing
