use email variable

--- a/_posts/2017-10-06-username.md
+++ b/_posts/2017-10-06-username.md
@@ -10,4 +10,4 @@ A SESYNC username is usually your first initial followed by your last name, (i.e
 
 You can lookup your usename at [pwm.sesync.org](https://pwm.sesync.org/) using the "Forgotten
 Username" link and the email address you initially registered. If you don't know the email
-address you registered, please contact **cyberhelp@sesync.org**.
+address you registered, please contact **{{ site.email }}**.
