--- a/_posts/2017-12-18-password.md
+++ b/_posts/2017-12-18-password.md
@@ -16,7 +16,7 @@ Point your web browser to [https://pwm.sesync.org](https://pwm.sesync.org).
 
 ![password1](/assets/images/password2.png)
 
-3. You will be prompted to enter the e-mail you supplied when setting up the account.  If you have more than one e-mail address and are unsure when one to use, please contact cyberhelp@sesync.org
+3. You will be prompted to enter the e-mail you supplied when setting up the account.  If you have more than one e-mail address and are unsure when one to use, please contact {{ site.email }}
 
 ![password1](/assets/images/password3.png)
 
