--- a/_posts/2017-12-18-password.md
+++ b/_posts/2017-12-18-password.md
@@ -4,6 +4,7 @@ category: faq
 tags:
  - infrastructure
  - account
+sticky: true
 ---
 
 Point your web browser to [https://pwm.sesync.org](https://pwm.sesync.org). 
