--- a/_posts/2018-03-09-standardized-evaluation.Rmd
+++ b/_posts/2018-03-09-standardized-evaluation.Rmd
@@ -53,7 +53,7 @@ The intent above is to keep rows that have the value of `level` in whichever col
 level_mean_nope(plots, 'Plot', 2, 'Cover')
 ```
 
-What's worse than the warning is that the answer given, `NA`, is wrong! Without the `summarize` part, the result would still not be what you'ld expect, and there would be no warning at all.
+What's worse than the warning is that the answer given, `NA`, is wrong! Without the `summarize` part, the result would still not be what you'd expect, and there would be no warning at all.
 
 By the way, have you read the [Programming with dplyr] vignette? Did it help? Yeah, me neither ... but this stuff is hard to understand!
 
