update md, blogs and quick start Jupyterlab

--- a/_posts/2018-09-08-raster-change-analysis.Rmd
+++ b/_posts/2018-09-08-raster-change-analysis.Rmd
@@ -46,7 +46,7 @@ library(ggplot2)
 
 ## Raster Change analysis with Two dates: Hurricane Rita
 
-This blog provides a simple example of change detection analysis using remotely sensed images from two dates. To measure change, we will use a vegetation index (NDVI) to examine how the vegetation and surface was affected by the hurricane.I use two images from the MODIS Terra Sensor (MOD09) to examine if the impact of Hurricane Rita is visible on the ground. Hurricane Rita was a category 3 hurricane that made landfall on September 24, 2005 in the southwest Louisiana coast. The hurricane generated a surge of more than 4 meters than resulted in flooding and in several areas along the coast.
+This blog provides a simple example of change detection analysis using remotely sensed images from two dates. To measure change, we will use a vegetation index (NDVI) to examine how the vegetation and surface was affected by the hurricane. I use two images from the MODIS Terra Sensor (MOD09) to examine if the impact of Hurricane Rita is visible on the ground. Hurricane Rita was a category 3 hurricane that made landfall on September 24, 2005 in the southwest of Louisiana. The hurricane generated a surge of more than 4 meters than resulted in flooding and in several areas along the coast.
 
 For this example, we take an image comparison approach using pair of images rather than a time series approach. Pairwise differencing is a common simple approach to asses change when data is scarce in rapid mapping applications. I downloaded and processed MOD09 images for the date before and after hurricane Rita. The data was screened for unreliable pixels and aggregated at a 1km spatial resolution to deal with missing values. The goal of the blog is focus on the analysis for detailed explanation of the tools (e.g. raster package R) please follow links and see the [reference](#references) section.
 
@@ -127,7 +127,7 @@ plotRGB(r_after,
 
 ```
 
-A second useful step is to generate a False color composite. This is similar to a Color Infrared (CIR) photography. We generate a RGB false composite which requires identifying spectral bands corresponding to red (band 2: SWIR), green (band 4) and blue (band 1). False Color compisites may be particularly are useful to detect vegetation and water presence on the ground. 
+False color composite images can also be useful to visualize change on the ground. Such composite is similar to a Color Infrared (CIR) photography. We generate a RGB false composite by identifying spectral bands corresponding to red (band 2: SWIR), green (band 4) and blue (band 1). False Color composites may be particularly are useful to detect vegetation and water presence on the ground. 
 
 ```{r, echo=TRUE}
 
@@ -149,7 +149,7 @@ plotRGB(r_after,
 
 ```
 
-Visual inspection suggests some change areas especially visible in the false color composite towards the coast in the South East part of the study area. The next step will be to quantitavely assess where changes occur. We will use specific spectral bands combinations (indices) to focus on specific features from the ground. 
+Visual inspection suggests some change areas especially visible in the false color composite towards the coast in the South East part of the study area. The next step is to quantitavely assess where changes occur. We use specific spectral bands combinations (indices) to focus on specific features from the ground. 
 
 ### Generating Indices from the original bands: NDVI
 
@@ -174,20 +174,22 @@ levelplot(r_NDVI_s,
 
 ```
 
-Comparison of before and after NDVI images suggests a general drop in NDVI for the region with some additional pockets of water near the coast. This visual comparison is interesting but let  us check with data from Federal Emergency Management Agency (FEMA) that mapped the area flooded by Rita. We use a vector file with zone=1 representing flooding and zone=0 no flooding. This is rasterized to produce a boxplot of the averages by zones.
+Comparison of before and after NDVI images suggests a general drop in NDVI for the region with some additional pockets of water near the coast. This visual comparison is interesting but let  us check results against data from the Federal Emergency Management Agency (FEMA) that mapped the area flooded by Rita. We use a vector file with zone=1 representing flooding and zone=0 no flooding. This is rasterized to produce a boxplot of the averages by zones.
 
 ```{r,echo=T}
 
+# Use sf package to read in the input vector file:
 reg_sf <- st_read(file.path(in_dir,infile_reg_outline))
+# Match projection between sf and NDVI data
 reg_sf <- st_transform(reg_sf,
-                       crs=projection(r_after_NDVI))
+                       crs=projection(r_after_NDVI)) 
 reg_sp <-as(reg_sf, "Spatial") #Convert to sp object before rasterization
-reg_sp <- as(reg_sf,"Spatial")
+# Use rasterize from R package:
 r_ref <- rasterize(reg_sp,
                    r_after_NDVI,
                    field="OBJECTID_3",
                    fun="min")
-
+# Visualize reference data:
 plot(r_ref, "FEMA Flood Zones")
 
 r_NDVI_s <- mask(r_NDVI_s,r_ref)
@@ -199,8 +201,10 @@ ncell(r_NDVI_s) #Ok not too big, let's coerce the raster into data.frame
 ##This is not advisable for large dataset to convert from raster to data.frame
 #since it loads everything in memory!! 
 
-data_df <- na.omit(as.data.frame(r_NDVI_s))
+#Convert to data.frame
+data_df <- na.omit(as.data.frame(r_NDVI_s)) #drop NA
 
+## Reformat data to use in the boxplot
 zonal_var_df <- gather_(data_df,key="variable",value="value",names(r_NDVI_s)[1:2])
 zonal_var_df$zone <- factor(zonal_var_df$zone,labels=c("Not flooded","Flooded"))
 
@@ -212,7 +216,7 @@ bp + facet_wrap(~zone) #Generate a faceted boxplot
 
 ```
 
-Using FEMA data, we found that on average, NDVI dropped by 0.1 in areas that were flooded while other areas displayed a slight increase. We also see that there is larger variance in flooded areas. In many cases, we do not have ancillary information on the areas flooded and we need to generate those from the original satellite images. We present below such analysis using a difference image and a reclassification procedure to map areas into impact classes.
+Using FEMA data, we found that on average, NDVI dropped by 0.1 in areas that were flooded while non-flooded areas displayed a slight increase. We also see that there is larger variance in flooded areas. In many cases, we do not have ancillary information and we need to generate rapidly flooding areas from the original satellite images. We present below such analysis using a simple difference image approach with a reclassification procedure to map areas into impact classes.
 
 First, let's generate a difference image using NDVI before and after the hurricane event:
 
@@ -227,7 +231,7 @@ histogram(r_diff)
 
 ### Classifying differences in impact/damage classes
 
-We will use a method often used in the scientific literature using a standardized difference image. We generate mean and standard deviation for the difference raster and reclassify the standardized difference image using thresholds assuming a normal distribution. The limits of classes are summarized in the table below:
+We will use a method often used in the scientific literature using a standardized difference image. We generate mean and standard deviation values to reclassify the standardized difference image using thresholds assuming a normal distribution. The limits of classes are summarized in the table below:
 
 label       Threshold min    Threshold max    value
 --------   --------------   ---------------- --------
@@ -264,9 +268,9 @@ freq(r_impact1)
 
 ```
 
-Let's now visualize the output and compute the area for each category. Results indicate that few pixels are selected as highly impacted. This suggests that we may be underestimating the flooded area. 
+Let's now visualize the output and compute the area for each category. Results indicate that few pixels are selected as highly impacted. This suggests that we may be underestimating the flooded areas. 
 
-Options may be to change: the threshold value to 1 standard deviation or use different procedure to reclassify the original difference image. A quick qqplot suggests that our assumption that the data follows a normal distribution is probably unwise. We also note the shoulder in the histogram of distribution and the qqplot. We will use simple thresholding and reclassification to generate another impact map.
+Options may be to change: the threshold value to 1 standard deviation or use a different procedure to reclassify the original difference image. A quick qqplot suggests that our assumption that the data follows a normal distribution is probably unwise. We also note the shoulder in the histogram of distribution and the qqplot. We will use simple thresholding and reclassification to generate another impact map.
 
 ```{r}
 qqnorm(values(r_std))
@@ -274,7 +278,7 @@ abline(0, 1)
 
 ```
 
-In the second procedure, we assign positive and low decreases in NDVI value 0 (no change), level 1 decrease in NDVI (low impact) for range [-0.3,0.1] while level 2 decrease (higher impact from higher intensity).
+In the second procedure, we assign positive and low decreases to NDVI value 0 (no change), level 1 decrease to NDVI (low impact) for range [-0.3,0.1] while level 2 decrease to [-10,0.3] (higher impact from higher intensity).
 
 label       Threshold min    Threshold max    value
 --------   --------------   ---------------- --------
@@ -339,11 +343,13 @@ writeRaster(r_impact2,
 
 ### Conclusions
 
-This blog introduced a simple change detection analysis using MOD09 product aggregated at 1km resolution. We used two MODIS sensor images captured before and after hurrican Rita on the coast of Louisiana. Visual inspection showed evidence of changes (both in indivdiual bands and color composites). We also found that we are able to find quantitative changes, most notably a decrease in average NDVI in flooded areas. We used two common thresholding techniques used by researchers to classify the impact from a difference image (after-before) and found some matching with the FEMA flood map but with underestimation. The analysis is simple and straightforward but could be refined by using different thresholding and accounting for the vegetation and flood seasonality in the data. This would lead to more advanced topic: time series analysis of raster images. This may be a topic for a new blog!
+This blog introduced a simple change detection analysis using MOD09 product aggregated at 1km resolution. We used two MODIS sensor images captured before and after hurrican Rita on the coast of Louisiana. Visual inspection showed evidence of changes (both in indivdiual bands and color composites). We also found quantitative changes in NDVI, most notably a decrease in average NDVI in flooded areas. We used two common thresholding techniques used by researchers to classify the impact from a difference image (after-before) and found some matching with the FEMA flood map but with some underestimation. The analysis is simple and straightforward but could be refined by using different thresholding or other procedures. For instance, , more advanced approach can account for the vegetation and flood seasonality in the data. This type of analysis would lead to a more advanced topic: time series analysis of raster images. This may be a topic for a new blog!
 
 ### References
 
 - For a general introduction to spatial data: http://rspatial.org/spatial/rst/1-introduction.html
+- For information on manupulating spatial data and plotting:
+https://datacarpentry.org/geospatial-workshop/ 
 - For Geosptial teaching material from the National Socio-Environmental Center: http://cyberhelp.sesync.org/syllabi/2018/04/02/geospatial-workshop.html
 - For an example of a research study on hurricane impact: Hurricane disturbance mapping using MODIS EVI data in the southeastern Yucatán, Mexico
 John Rogan , Laura Schneider , Zachary Christman , Marco Millones , Deborah Lawrence  & Birgit Schmook
