fixing tags and docs

--- a/faq/_posts/2017-01-04-password.md
+++ b/faq/_posts/2017-01-04-password.md
@@ -1,8 +1,8 @@
 ---
 title: How do I change my SESYNC password?
 tags:
- - infrastructure
- - account
+ - Infrastructure
+ - Account
 sticky: true
 ---
 
